seo - added google site verification meta tag to google serach console

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="German Gonzalez Garzon - Portfolio"
     />
+    <meta name="google-site-verification" content="rOwIM90UG22x6bXsLTCgXbDQ0fuF0mpOwsz_SvVsv7k" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
