--- a/index.html
+++ b/index.html
@@ -5,21 +5,33 @@
     <link rel="icon" href="/JLogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="German Gonzalez Garzon - Portfolio" />
+    <meta
+      name="description"
+      content="German Gonzalez Garzon - Portfolio"
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
+    <!--LINE COMMENTED BECAUSE CONSOLE ERROR-->
+    <!-- <link rel="manifest" href="/manifest.json" /> -->
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <title>Portfolio German</title>
     <meta name="google-site-verification" content="rOwIM90UG22x6bXsLTCgXbDQ0fuF0mpOwsz_SvVsv7k" />
-    <!-- Open Graph meta tags for better social sharing -->
-    <meta property="og:title" content="Portfolio German" />
-    <meta property="og:description" content="German Gonzalez Garzon - Portfolio" />
-    <meta property="og:image" content="/JLogo.svg" />
-    <meta property="og:url" content="https://your-portfolio-url.com" />
-    <meta name="twitter:card" content="summary_large_image" />
   </head>
   <body>
-    <noscript>
-      <strong>JavaScript is required to run this application. Please enable JavaScript in your browser settings.</strong>
-    </noscript>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
