--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="German Gonzalez Garzon - Portfolio"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="preload" as="image" href="/images/computer_code_and_coffe.webp">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
