--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       content="German Gonzalez Garzon - Portfolio"
     />
     <link rel="preload" as="image" href="/images/computer_code_and_coffe.webp">
+    <link rel="preload" as="image" href="/images/german-selfie-webp.webp">
+    <link rel="preload" href="/node_modules/@fontsource-variable/onest/files/onest-latin-wght-normal.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
